2005-02-01  Raja R Harinath  <rharinath@novell.com>

	* get.c (get_method_core): Use mono_method_signature (mh), not
	mh->signature.

2005-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* get.c dis-cil.c dump.c: Fix 64 bit warnings.

2004-12-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* dump.c:
	* dis-cil.c: added isinf() for Solaris, that does not seem to have it.
	Fixes the build on Solaris.

2004-12-13  Miguel de Icaza  <miguel@ximian.com>

	* dis-cil.c, dump.c: Encode special constant +Inf, -Inf and NaN
	using hex constants instead of letting libc print the values.

2004-12-11  Martin Baulig  <martin@ximian.com>

	* get.c (get_typespec): Added `gboolean is_def' argument; removed
	the special case for MONO_TYPE_VAR/MVAR and pass `is_def' down to
	dis_stringify_type().
	(get_escaped_name): Allow `!'.	

2004-12-11  Martin Baulig  <martin@ximian.com>

	* get.c (get_token): Escape typedefs.

2004-12-11  Martin Baulig  <martin@ximian.com>

	* get.c (get_escaped_name): Correctly escape nested classes.

2004-12-11  Martin Baulig  <martin@ximian.com>

	* get.c (get_class_name): Renamed to get_escaped_class_name() and
	return an escaped class name; correctly escape nested classes.

2004-12-11  Martin Baulig  <martin@ximian.com>

	* get.c (dis_stringify_type): Added `gboolean is_def' argument; if
	false, display type parameters as numbers and not as names.
	(dis_stringify_object_with_class): Added `gboolean is_def' argument.
	(dis_stringify_array): Likewise.

2004-12-10  Martin Baulig  <martin@ximian.com>

	* get.c (init_key_table): Added `type' and `strict'.
	(get_generic_param): Also escape the type parameter names.
	Correctly handle multiple constraints.

2004-12-10  Martin Baulig  <martin@ximian.com>

	* get.c (get_fieldref_signature): Escape the field type and name
	here, too.

2004-12-10  Martin Baulig  <martin@ximian.com>

	Started to add generics support to monodis.

	* get.c (get_typedef_or_ref): Added `MonoGenericContext *'.